--- a/src/Fourthpage/Fourthpage.css
+++ b/src/Fourthpage/Fourthpage.css
@@ -18,6 +18,9 @@
   align-items: center;
   gap: 55%;
 }
+.fourthpage-heading-information-label{
+  margin-bottom: 0px;
+}
 .fourthpage-side-panel{
     display: flex;
     flex-direction: row;
@@ -38,7 +41,7 @@ width: 119px;
 }
 .fourthpage-business-text{
     color: black;
-    font-weight: 900;
+ 
     margin-bottom: 0px;
     font-family: Hind;
     font-size: 14px;
@@ -52,13 +55,13 @@ width: 119px;
   align-items: center;
 }
 .fourthpage-first-img {
-  width: 110px;
-  height: 84px;
+  width: 100px;
+  height: 74px;
   mix-blend-mode: normal;
 }
 .fourthpage-text1 {
   mix-blend-mode: normal;
-  font-size: 24px;
+  font-size: 26px;
   font-family: Hind;
   font-weight: 700;
 }
@@ -83,7 +86,7 @@ width: 119px;
   font-family: Hind;
   margin-bottom: 0px;
   color: black;
-  font-weight: 900;
+
 
 }
 .fourthpage-first-img4 {
@@ -124,11 +127,13 @@ width: 119px;
 display: flex;
 flex-direction: row;
 align-items: center;
+margin-top: 10px;
 }
 .fourthpage-detail-information{
     display: flex;
     flex-direction: row;
-    padding: 0px 20px;
+    padding: 10px 20px;
+    justify-content: space-between;
 }
 .fourthpage-person-detail{
     display: flex;
@@ -141,7 +146,7 @@ align-items: center;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    width: 250px;
+
 }
 .fourthpage-person-image{
     width: 100px;
@@ -179,9 +184,8 @@ display: flex;
 flex-direction: row;
 position: relative;
 top: 20px;
-left: 30px;
-justify-content: space-between;
-width: 1234px;
+justify-content: space-around;
+width: 1290px;
 }
 .fourthpage-button1{
   background-color: #f39507;
@@ -432,7 +436,7 @@ gap: 20px;
 /*whiteblock4*/
 /*whiteblock*/
 /*card-section*/
-.copyright-block{
+.fourthpage-copyright-block{
     mix-blend-mode: normal;
     display: flex;
     font-size: 16px;
@@ -463,7 +467,7 @@ gap: 20px;
       left:649px
     }
     .fourthpage-header-section{
-      gap: 48%;
+      gap: 45%;
     }
     .fourthpage-whiteblock{
       height:1268px;
@@ -552,32 +556,24 @@ gap: 20px;
       margin-left: 130px;
     }
     .fourthpage-buttons{
-      justify-content: center;
-      width: 900px;
-      gap: 20%;
+      justify-content: space-around;
+      width: 970px;
+   
     }
   }
   @media (max-width:1215px) {
     .fourthpage-header-section{
-      gap: 45%;
+      gap: 42%;
     }
   }
   @media (max-width:1145px) {
     .fourthpage-header-section{
-      gap: 40%;
+      gap: 37%;
     }
   }
   @media (max-width:1050px) {
     .fourthpage-header-section{
-      gap: 36%;
-    }
-  }
-  @media (max-width:985px) {
-    .fourthpage-header-section{
       gap: 33%;
-    }
-    .fourthpage-text1{
-      font-size: 20px;
     }
   }
   @media (max-width:1000px) {
@@ -590,7 +586,7 @@ gap: 20px;
     }
     .fourthpage-whiteblock{
       height:1800px;
-      width: 648px;
+      width: 782px;
     }
     .fourthpage-line1,.fourthpage-line2{
       height: 1100px;
@@ -603,11 +599,12 @@ gap: 20px;
     }
     .fourthpage-line4,.fourthpage-line5,.fourthpage-line6,.fourthpage-line7,.fourthpage-line8,.fourthpage-line9,.fourthpage-line10,.fourthpage-line11,.fourthpage-line12,.fourthpage-line13{
  
-      width: 545px;
+      width: 655px;
      
     }
     .fourthpage-line1{
       height: 1630px;
+      left: 390px;
     }
     .fourthpage-line2{
       display: none;
@@ -617,7 +614,7 @@ gap: 20px;
       height: 1px;
       display: block;
       position: absolute;
-      width: 545px;
+      width: 655px;
       top: 1255px;
       left: 60px;
     }
@@ -626,7 +623,7 @@ gap: 20px;
       height: 1px;
       display: block;
       position: absolute;
-      width: 545px;
+      width: 655px;
       top: 1361px;
       left: 60px;
     }
@@ -635,7 +632,7 @@ gap: 20px;
       height: 1px;
       display: block;
       position: absolute;
-      width: 545px;
+      width: 655px;
       top: 1465px;
       left: 60px;
     }
@@ -644,7 +641,7 @@ gap: 20px;
       height: 1px;
       display: block;
       position: absolute;
-      width: 545px;
+      width: 655px;
       top: 1570px;
       left: 60px;
     }
@@ -653,7 +650,7 @@ gap: 20px;
       height: 1px;
       display: block;
       position: absolute;
-      width: 545px;
+      width: 655px;
       top: 1675px;
       left: 60px;
     }
@@ -696,11 +693,17 @@ gap: 20px;
     .service24{
       left: 370px;
       top: 1690px;
+
     }
-    .fourthpage-buttons{
-      gap: 10%;
-      width: 600px;
+    .service1,.service5,.service9,.service13,.service17,.service21,.service25,.service29,.service4,.service16,.service28,.service3,.service11,.service19,.service27,.service12{
+      left: 150px;
     }
+    .service2,.service6,.service10,.service14,.service18,.service22,.service26,.service30,.service8,.service23,.service15,.service31,.service24,.service7,.service20,.service32{
+      left: 450px;
+    }
+   .fourthpage-buttons{
+    width: 780px;
+   }
     .fourthpage-button1,.fourthpage-button2{
       width: 80px;
     }
@@ -708,38 +711,57 @@ gap: 20px;
       margin-left: 30px;
     }
   }
-  @media (max-width:880px) {
+  @media (max-width:985px) {
     .fourthpage-header-section{
-      gap:27%;
+      gap: 25%;
+    }
+    .fourthpage-text1{
+      font-size: 26px;
     }
   }
-  @media (max-width:810px) {
+ 
+  @media (max-width:880px) {
     .fourthpage-header-section{
       gap:19%;
     }
+  }
+  @media (max-width:820px) {
+    .fourthpage-header-section{
+      gap:9%;
+    }
     .fourthpage-text1{
-      font-size: 18px;
+      font-size: 26px;
     }
     .fourthpage-card-section{
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
       align-items: center;
+      height: 800px;
+     gap: 50px;
     }
     .fourthpage-card-section-image{
-      width: 700px;
+      width: 680px;
       height: 350px;
     }
     .fourthpage-information-card{
-      width: 700px;
+      width: 680px;
       height: 350px ;
     }
-    .fourthpage-card-section{
-      height: 800px;
-    }
+   
     .fourthpage-whiteblock{
-      top: 900px;
+      top: 940px;
+      width: 680px;
     }
+    .fourthpage-line4,.fourthpage-line5,.fourthpage-line6,.fourthpage-line7,.fourthpage-line8,.fourthpage-line9,.fourthpage-line10,.fourthpage-line11,.fourthpage-line12,.fourthpage-line13{
+ 
+      width: 565px;
+     
+    }
+    .fourthpage-line1{
+      left: 340px;
+    }
+   
     .fourthpage{
       height: 2800px;
     }
@@ -751,35 +773,45 @@ gap: 20px;
       width: 150px;
     }
     .fourthpage-heading-information-label{
-      font-size: 26px;
+      font-size: 24px;
     }
     .fourthpage-person-name,.fourthpage-person-place,.fourthpage-person-status,.fourthpage-person-rollno{
       display: flex;
       flex-direction: row;
       justify-content: flex-start;
-      width: 350px;
+
       font-size: 20px;
+  }
+  .fourthpage-buttons{
+    width: 680px;
+  }
+  .service1,.service5,.service9,.service13,.service17,.service21,.service25,.service29,.service4,.service16,.service28,.service3,.service11,.service19,.service27,.service12{
+    left: 100px;
+  }
+  .service2,.service6,.service10,.service14,.service18,.service22,.service26,.service30,.service8,.service23,.service15,.service31,.service24,.service7,.service20,.service32{
+    left: 400px;
+  }
+  .fourthpage-person-name{
+    margin-top: 10px;
   }
   .fourthpage-detail-options{
     width: 120px;
   }
-  .fourthpage-detail-information{
-    justify-content: space-between;
-  }
+ 
   }
   @media (max-width:710px) {
     .fourthpage-header-section{
-      gap: 10%;
+      gap: 35%;
     }
     .fourthpage-text1{
-      font-size: 14px;
+  display: none;
     }
     .fourthpage-card-section-image{
-      width: 590px;
+      width: 570px;
       height: 350px;
     }
     .fourthpage-information-card{
-      width: 590px;
+      width: 570px;
       height: 350px ;
     }
     .fourthpage-whiteblock{
@@ -814,65 +846,70 @@ gap: 20px;
       margin: 0px 5px;
     }
     .fourthpage-business-button{
-width: 90px;
+width: 119px;
     }
     .fourthpage-business-text{
-font-size: 12px;
+font-size: 14px;
     }
     .fourthpage-whitebox{
- width: 100px;
+ width: 119px;
     }
     .fourthpage-text3{
-font-size: 12px;
+font-size: 14px;
     }
   }
   @media (max-width:600px) {
     .fourthpage-header-section{
-      gap: 9%;
+      gap: 33%;
+    }
+    .fourthpage-text1{
+      display: none;
     }
     .fourthpage-information-card{
-      width: 450px;
+      width: 480px;
       height: 300px;
     }
+    .fourthpage-heading-information-label{
+      font-size: 22px;
+    }
+    .fourthpage-person-name,.fourthpage-person-place,.fourthpage-person-status,.fourthpage-person-rollno{
+    font-size: 18px;
+  }
     .fourthpage-card-section-image
     {
       height: 300px;
-      width: 450px;
+      width: 480px;
     }
     .fourthpage-whiteblock{
-      top: 820px;
+      top: 840px;
+      width: 480px;
     }
     .fourthpage-person-image{
       height: 120px;
       width: 120px;
     }
-    .fourthpage-person-name,.fourthpage-person-place,.fourthpage-person-status,.fourthpage-person-rollno{
-     
-      width: 250px;
-     
-  }
-  .fourthpage-whiteblock{
-    width: 430px;
-  }
+
+
   .fourthpage-buttons{
     display: flex;
     flex-direction: column;
     gap: 10px;
     align-items: center;
     left: 0px;
-    width: 430px;
+    width: 480px;
+    justify-content: center;
   }
   .search-button{
     width: 370px;
   }
   .service1,.service5,.service9,.service13,.service17,.service21,.service25,.service29,.service4,.service16,.service28,.service3,.service11,.service19,.service27,.service12{
-    left: 18px;
+    left: 30px;
   }
   .service2,.service6,.service10,.service14,.service18,.service22,.service26,.service30,.service8,.service23,.service15,.service31,.service24,.service7,.service20,.service32{
-    left: 231px;
+    left: 260px;
   }
   .fourthpage-line1{
-    left: 208px;
+    left: 240px;
   }
   .fourthpage-line4,.fourthpage-line5,.fourthpage-line6,.fourthpage-line7,.fourthpage-line8,.fourthpage-line9,.fourthpage-line10,.fourthpage-line11,.fourthpage-line12,.fourthpage-line13,.fourthpage-line14,.fourthpage-line15,.fourthpage-line16,.fourthpage-line17,.fourthpage-line18{
    left: 35px;
@@ -888,22 +925,18 @@ font-size: 12px;
   }
   @media (max-width:550px) {
     .fourthpage-header-section{
-      gap: 3%;
+      gap: 28%;
       
     }
 
   }
   @media (max-width:500px) {
+  
+ 
     .fourthpage-header-section{
-      display: flex;
-      flex-direction: column;
-      height: 140px;
-      gap: 0%;
+      gap: 10%;
+      
     }
-    .fourthpage-text1{
-      font-size: 24px;
-    }
-    
     .fourthpage-information-card{
       width: 380px;
       height: 270px;
@@ -917,11 +950,7 @@ font-size: 12px;
       width: 100px;
       height: 100px;
     }
-    .fourthpage-person-name,.fourthpage-person-place,.fourthpage-person-status,.fourthpage-person-rollno{
-     
-      width: 200px;
-     
-  }
+ 
   .fourthpage-heading-information-label{
     font-size: 22px;
   }
@@ -930,20 +959,20 @@ font-size: 16px;
 width: 90px;
   }
 .fourthpage-whiteblock{
-  top: 830px;
+  top: 780px;
   width: 380px;
 }
 .fourthpage-business-button{
-  width: 150px;
+  width: 119px;
       }
       .fourthpage-business-text{
-  font-size: 20px;
+  font-size: 14px;
       }
       .fourthpage-whitebox{
-   width: 150px;
+   width: 119px;
       }
       .fourthpage-text3{
-  font-size: 20px;
+  font-size: 14px;
       }
       .fourthpage-buttons{
         width: 380px;
@@ -967,6 +996,89 @@ width: 90px;
       }
       .search-button-image2{
         margin: 0px 10px;
+      }
+      .fourthpage-description-reason{
+        font-size: 14px;
+      }
+      .service1,.service2{
+        margin-top: 5px;
+      }
+  }
+  @media (max-width:410px) {
+  
+ 
+    .fourthpage-header-section{
+      gap: 4%;
+      
+    }
+    .fourthpage-information-card{
+      width: 330px;
+      height: 270px;
+    }
+    .fourthpage-card-section-image
+    {
+      height: 270px;
+      width: 330px;
+    }    
+    .fourthpage-person-image{
+      width: 70px;
+      height: 70px;
+    }
+ 
+  .fourthpage-heading-information-label{
+    font-size: 18px;
+  }
+  .fourthpage-person-name,.fourthpage-person-place,.fourthpage-person-status,.fourthpage-person-rollno{
+    font-size: 15px;
+  }
+  .fourthpage-detail-options{
+font-size: 16px;
+width: 90px;
+  }
+.fourthpage-whiteblock{
+  top: 780px;
+  width: 330px;
+}
+.fourthpage-business-button{
+  width: 119px;
+      }
+      .fourthpage-business-text{
+  font-size: 14px;
+      }
+      .fourthpage-whitebox{
+   width: 119px;
+      }
+      .fourthpage-text3{
+  font-size: 14px;
+      }
+      .fourthpage-buttons{
+        width: 329px;
+        gap: 20px;
+      }
+      .service1,.service5,.service9,.service13,.service17,.service21,.service25,.service29,.service4,.service16,.service28,.service3,.service11,.service19,.service27,.service12{
+        left: 10px;
+        gap: 5px;
+      }
+      .service2,.service6,.service10,.service14,.service18,.service22,.service26,.service30,.service8,.service23,.service15,.service31,.service24,.service7,.service20,.service32{
+        left: 175px;
+        gap: 5px;
+      }
+      .fourthpage-line1{
+        left: 165px;
+      }
+      .fourthpage-line4,.fourthpage-line5,.fourthpage-line6,.fourthpage-line7,.fourthpage-line8,.fourthpage-line9,.fourthpage-line10,.fourthpage-line11,.fourthpage-line12,.fourthpage-line13,.fourthpage-line14,.fourthpage-line15,.fourthpage-line16,.fourthpage-line17,.fourthpage-line18{
+       left: 25px;
+        width:280px;
+       
+      }
+      .search-button{
+        width: 320px;
+      }
+      .search-button-image2{
+        margin: 0px 5px;
+      }
+      .search-button-image3{
+        margin-left: 30px;
       }
       .fourthpage-description-reason{
         font-size: 14px;
