--- a/src/Service/Service.css
+++ b/src/Service/Service.css
@@ -25,12 +25,12 @@
 }
 .thirdpage-first-img {
   width: 110px;
-  height: 84px;
+  height: 78px;
   mix-blend-mode: normal;
 }
 .thirdpage-text1 {
   mix-blend-mode: normal;
-  font-size: 22px;
+  font-size: 26px;
   font-family: Hind;
   font-weight: 700;
 }
@@ -99,6 +99,7 @@
 display: flex;
 flex-direction: row;
 align-items: center;
+margin-top: 10px;
 }
 .thirdpage-heading-information-label{
   margin-bottom: 0px;
@@ -177,6 +178,10 @@ align-items: center;
   .service44{
     left: 441.5px;
     top: 50px;
+  
+  }
+  .image4{
+    margin-bottom: 30px;
   }
   .service45{
     left: 589px;
@@ -545,7 +550,7 @@ align-items: center;
         top: 545px;
       }
       .thirdpage-header-section{
-        gap: 52%;
+        gap: 51%;
       }
   }
   @media (max-width:1100px) {
@@ -553,10 +558,10 @@ align-items: center;
       width: 500px;
      }
      .thirdpage-text1{
-      font-size: 22px;
+      font-size: 26px;
      }
      .thirdpage-header-section{
-      gap: 50%;
+      gap: 46%;
      }
      .thirdpage-whiteblock{
       height: 725px;
@@ -683,10 +688,10 @@ align-items: center;
       width: 421px;
      }
      .thirdpage-text1{
-      font-size: 22px;
+      font-size: 26px;
      }
      .thirdpage-header-section{
-      gap:43%;
+      gap:40%;
      }
      .thirdpage-whiteblock{
       height: 890px;
@@ -819,7 +824,7 @@ align-items: center;
       gap: 31%;
      }
      .thirdpage-heading-information-label{
-      font-size: 32px;
+      font-size: 24px;
     }
     
      .thirdpage-text1{
@@ -983,10 +988,10 @@ align-items: center;
       }
      
      .thirdpage-heading-information{
-      font-size: 26px;
+      font-size: 24px;
      }
      .thirdpage-person-name,.thirdpage-person-place,.thirdpage-person-rollno,.thirdpage-person-status{
-      font-size: 28px;
+      font-size: 22px;
     
       margin-bottom: 10px;
      }
